--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Autres/Python/test_utile/del_whitespacce/dictionnaire.txt
 Autres/Python/test_utile/del_whitespacce/dictionnaire1.txt
 Autres/Python/test_utile/del_whitespacce/dictionnaire_whitespace_deleted.txt
 
+.buildozer/
